@@ -327,7 +327,7 @@ utils_read_fd( compat_fd fd, const char *filename, utils_file *file )
   file->length = compat_file_get_length( fd );
   if( file->length == -1 ) return 1;
 
-  file->buffer = libspectrum_malloc( file->length );
+  file->buffer = libspectrum_new( unsigned char, file->length );
 
   if( compat_file_read( fd, file ) ) {
     libspectrum_free( file->buffer );
