@@ -4649,4 +4649,6 @@
          win32/win32ui.c}: add and use ARRAY_SIZE macro (Stuart).
 20150302 display.c,event.c,machine.c,memory.c,periph.c,rectangle.c,sound.c: use
          libspectrum_{new,new0,renew}() macros where sizeof(elem) > 1 (Stuart).
-
+20150302 fuse.c,memory.c,peripherals/disk/disk.c,rzx.c,settings.pl,slt.c,tape.c,
+         ui/widget/text.c,utils.c: use libspectrum_{new,new0,renew}() macros
+         where sizeof(elem) == 1 (Stuart).
